--- a/vsem_calibration_tests/code_validation.Rmd
+++ b/vsem_calibration_tests/code_validation.Rmd
@@ -232,7 +232,7 @@ true_post <- linear_Gaussian_data$true_posterior
 ```{r}
 N_mcmc <- 50000
 samp <- mcmc_calibrate(computer_model_data, theta_prior_params, diag_cov = TRUE, learn_Sig_eps = FALSE, 
-                       Sig_eps_init = diag(1.0), N_mcmc = N_mcmc, adapt_cov_method = "AM", adapt_scale_method = "MH_ratio")
+                       ig_eps_init = diag(1.0), N_mcmc = N_mcmc, adapt_cov_method = "AM", adapt_scale_method = "MH_ratio")
 ```
 
 ```{r}
@@ -373,6 +373,96 @@ sig2_eps_hist_plot <- get_hist_plot(list(Gibbs_samp$sig2_eps[burn_in:N_mcmc,,dro
 print(sig2_eps_hist_plot)
 
 
+```
+
+# Testing Emulator-Based MCMC Calibration Algorithm.
+
+## Linear Gaussian Test
+
+### Model Setup. 
+```{r}
+N_obs <- 1000
+d <- 2
+G <- matrix(rnorm(N_obs*d), nrow = N_obs, ncol = d)
+Sig_theta <- diag(c(0.1, 1.0))
+sig2_eps <- 1.0
+linear_Gaussian_data <- generate_linear_Gaussian_test_data(random_seed = 3, N_obs = N_obs, D = d, sig2_eps = sig2_eps, 
+                                                           Sig_theta = Sig_theta, G = G, pars_cal_sel = NULL)
+computer_model_data <- linear_Gaussian_data$computer_model_data
+theta_prior_params <- linear_Gaussian_data$theta_prior_params
+true_post <- linear_Gaussian_data$true_posterior
+```
+
+
+### Baseline exact MCMC scheme. 
+```{r}
+N_mcmc <- 50000
+samp_baseline <- mcmc_calibrate(computer_model_data, theta_prior_params, diag_cov = TRUE, learn_Sig_eps = TRUE, 
+                                Sig_eps_prior_params = Sig_eps_prior_params, N_mcmc = N_mcmc, adapt_cov_method = "AM", adapt_scale_method = "MH_ratio")
+```
+
+
+### Model emulation. 
+
+```{r, echo = FALSE}
+# Emulator settings
+emulator_settings <- data.frame(gp_lib = c("mlegp"), 
+                                kernel = "Gaussian", 
+                                transformation_method = c("truncated"),
+                                scale_X = TRUE, 
+                                normalize_y = TRUE)
+print(emulator_settings)
+```
+
+
+```{r}
+# Design and validation points.
+
+N_train <- 8
+N_test <- 2500
+train_data <- get_input_output_design(N_train, theta_prior_params, computer_model_data = computer_model_data,  
+                                      scale_inputs = emulator_settings$scale_X, normalize_response = emulator_settings$normalize_y, 
+                                      param_ranges = NULL, output_stats = NULL, log_output_stats = NULL,
+                                      transformation_method = emulator_settings$transformation_method, design_method = "LHS") 
+
+test_data <- get_input_output_design(N_test, theta_prior_params, computer_model_data = computer_model_data,  
+                                     scale_inputs = emulator_settings$scale_X, normalize_response = emulator_settings$normalize_y, 
+                                     param_ranges = train_data$input_bounds, 
+                                     output_stats = train_data$output_stats, log_output_stats = train_data$log_output_stats,
+                                     transformation_method = emulator_settings$transformation_method, design_method = "grid") 
+```
+
+
+```{r, echo = FALsE}
+# Fit GPs. 
+gp_fits <- fit_independent_GPs(train_data$inputs_scaled, train_data$outputs_normalized, emulator_settings$gp_lib, emulator_settings$kernel)$fits
+```
+
+```{r}
+# Predict at test points.
+# TODO: generalize the below statement so that it would also work for LNP. 
+gp_pred_list <- predict_independent_GPs(X_pred = test_data$inputs_scaled, gp_obj_list = gp_fits, gp_lib = emulator_settings$gp_lib, 
+                                        denormalize_predictions = TRUE, output_stats = train_data$output_stats)
+```
+
+
+```{r}
+# Plot GPs. 
+for(j in seq_along(gp_pred_list)) {
+  gp_plot <- plot_gp_fit_1d(test_data$inputs, test_data$outputs[,j], train_data$inputs, train_data$outputs[,j], gp_pred_list[[j]]$mean, gp_pred_list[[j]]$var,
+                            xlab = "Parameter", ylab = "SSR", main_title = computer_model_data$output_vars[j], CI_prob = 0.9, 
+                            transformation_method = emulator_settings$transformation_method)
+  print(gp_plot)
+}
+```
+
+
+```{r}
+# TODO: make functions "get_gp_emulator_info_list()" and automatically have this function set `gp_output_stats` to the correct transformed version. 
+emulator_info <- list(gp_fits = gp_fits, 
+                      input_bounds = train_data$input_bounds,
+                      output_stats = train_data$output_stats, 
+                      settings = emulator_settings)
 ```
 
 
