--- a/vsem_calibration_tests/code_validation.Rmd
+++ b/vsem_calibration_tests/code_validation.Rmd
@@ -217,8 +217,10 @@ Here we choose the forward model to be linear, with Gaussian observation noise, 
 results in a closed-form Gaussian posterior which can be used to validate the MCMC schemes. 
 ```{r}
 N_obs <- 1000
-d <- 2
-G <- matrix(rnorm(N_obs*d), nrow = N_obs, ncol = d)
+period <- 365
+t_vals <- seq(1,N_obs)
+G <- cbind(cos(2*pi*t_vals/period), sin(2*pi*t_vals/period))
+d <- ncol(G)
 Sig_theta <- diag(c(0.1, 1.0))
 sig2_eps <- 1.0
 linear_Gaussian_data <- generate_linear_Gaussian_test_data(random_seed = 3, N_obs = N_obs, D = d, sig2_eps = sig2_eps, 
@@ -382,8 +384,10 @@ print(sig2_eps_hist_plot)
 ### Model Setup. 
 ```{r}
 N_obs <- 1000
-d <- 2
-G <- matrix(rnorm(N_obs*d), nrow = N_obs, ncol = d)
+period <- 365
+t_vals <- seq(1,N_obs)
+G <- cbind(cos(2*pi*t_vals/period), sin(2*pi*t_vals/period))
+d <- ncol(G)
 Sig_theta <- diag(c(0.1, 1.0))
 sig2_eps <- 1.0
 linear_Gaussian_data <- generate_linear_Gaussian_test_data(random_seed = 3, N_obs = N_obs, D = d, sig2_eps = sig2_eps, 
@@ -440,19 +444,35 @@ gp_fits <- fit_independent_GPs(train_data$inputs_scaled, train_data$outputs_norm
 
 ```{r}
 # Predict at test points.
-# TODO: generalize the below statement so that it would also work for LNP. 
+# TODO: should probably write a function that allows this if statement to hide behind a nicer interface. 
+if(emulator_settings$transformation_method == "LNP") {
+  output_stats <- train_data$log_output_stats
+} else {
+  output_stats <- train_data$output_stats
+}
+
 gp_pred_list <- predict_independent_GPs(X_pred = test_data$inputs_scaled, gp_obj_list = gp_fits, gp_lib = emulator_settings$gp_lib, 
-                                        denormalize_predictions = TRUE, output_stats = train_data$output_stats)
+                                        denormalize_predictions = TRUE, output_stats = output_stats)
 ```
 
 
 ```{r}
+# Questions:
+#    - Why is projection onto first dimension out of control but second dimension looks reasonable? 
+#    - TODO: need to think about confidence intervals for two-dimensional plots. 
+#    - What is up with jagged true function in second dimension? 
+
 # Plot GPs. 
 for(j in seq_along(gp_pred_list)) {
-  gp_plot <- plot_gp_fit_1d(test_data$inputs, test_data$outputs[,j], train_data$inputs, train_data$outputs[,j], gp_pred_list[[j]]$mean, gp_pred_list[[j]]$var,
-                            xlab = "Parameter", ylab = "SSR", main_title = computer_model_data$output_vars[j], CI_prob = 0.9, 
-                            transformation_method = emulator_settings$transformation_method)
-  print(gp_plot)
+  for(k in seq_along(computer_model_data$theta_true)) {
+    gp_plot <- plot_gp_fit_1d(test_data$inputs[,k,drop=FALSE], test_data$outputs[,j], train_data$inputs[,k,drop=FALSE], 
+                              train_data$outputs[,j], gp_pred_list[[j]]$mean,
+                              gp_pred_list[[j]]$var, xlab = "Parameter", ylab = "SSR",
+                              main_title = computer_model_data$output_vars[j], CI_prob = 0.9, 
+                              transformation_method = emulator_settings$transformation_method)
+    print(gp_plot)
+  }
+  
 }
 ```
 
