--- a/vsem_calibration_tests/code_validation.Rmd
+++ b/vsem_calibration_tests/code_validation.Rmd
@@ -416,11 +416,6 @@ emulator_settings <- data.frame(gp_lib = c("hetGP"),
 print(emulator_settings)
 ```
 
-```{r}
-samp_baseline <- mcmc_calibrate(computer_model_data, theta_prior_params, diag_cov = TRUE, learn_Sig_eps = FALSE, 
-                                Sig_eps_init = computer_model_data$Sig_eps, N_mcmc = N_mcmc, adapt_cov_method = "AM", adapt_scale_method = "MH_ratio")
-```
-
 
 ```{r}
 # Design and validation points.
@@ -459,6 +454,14 @@ gp_pred_list <- predict_independent_GPs(X_pred = test_data$inputs_scaled, gp_obj
 ```
 
 
+### MCMC comparison: Approximate vs. Exact (Fixed noise variance)
+
+
+```{r}
+samp_baseline <- mcmc_calibrate(computer_model_data, theta_prior_params, diag_cov = TRUE, learn_Sig_eps = FALSE, 
+                                Sig_eps_init = computer_model_data$Sig_eps, N_mcmc = N_mcmc, adapt_cov_method = "AM", adapt_scale_method = "MH_ratio")
+```
+
 ```{r}
 # Computer true posterior. 
 true_post_list <- calc_lpost_theta_product_lik(computer_model_data, theta_vals = test_data$inputs, 
@@ -484,7 +487,8 @@ for(j in seq_along(gp_pred_list)) {
 
 ```{r}
 # True Posterior. 
-post_plot <- get_2d_density_contour_plot(list(samp_baseline$theta[burn_in:N_mcmc,]), xlab = "theta1", ylab = "theta2", main_titles = "True Posterior")
+post_plot <- get_2d_density_contour_plot(list(samp_baseline$theta[burn_in:N_mcmc,]), xlab = "theta1", 
+                                         ylab = "theta2", main_titles = "True Posterior (Fixed Observation Variance)")
 print(post_plot)
 ```
 
@@ -508,8 +512,6 @@ emulator_info <- list(gp_fits = gp_fits,
                       settings = emulator_settings)
 ```
 
-
-### MCMC comparison: Approximate vs. Exact (Fixed noise variance)
 
 ```{r}
 N_mcmc <- 50000
@@ -542,6 +544,45 @@ for(j in seq(1,d)) {
 }
 
 ```
+
+
+### MCMC comparison: Approximate vs. Exact (Unknown noise variance)
+
+
+```{r}
+samp_baseline_2 <- mcmc_calibrate(computer_model_data, theta_prior_params, diag_cov = TRUE, learn_Sig_eps = TRUE, 
+                                Sig_eps_prior_params = Sig_eps_prior_params, N_mcmc = N_mcmc, adapt_cov_method = "AM", adapt_scale_method = "MH_ratio")
+```
+
+```{r}
+samp_GP_approx_2 <- mcmc_calibrate_ind_GP(computer_model_data, theta_prior_params, emulator_info, learn_Sig_eps = TRUE,
+                                          Sig_eps_prior_params = Sig_eps_prior_params, N_mcmc = N_mcmc)
+```
+
+
+```{r}
+
+# Histograms: theta. 
+for(j in seq(1,d)) {
+  hist_plot <- get_hist_plot(list(samp_baseline_2$theta[burn_in:N_mcmc,], samp_GP_approx_2$theta[burn_in:N_mcmc,]), col_sel = j, 
+                             bins = 50, xlab = computer_model_data$pars_cal_name[j],
+                             main_title = "Histogram of MCMC Samples: theta", data_names = c("Exact MCMC", "GP Approximate MCMC"), 
+                             vertical_line = computer_model_data$theta_true[j])
+  print(hist_plot)
+}
+
+# Histogram: sig2_eps. 
+hist_plot_sig2_eps <- get_hist_plot(list(samp_baseline_2$Sig_eps[burn_in:N_mcmc,,drop=FALSE], samp_GP_approx_2$Sig_eps[burn_in:N_mcmc,,drop=FALSE]), 
+                                    bins = 50, xlab = "sig2_eps",
+                                    main_title = "Histogram of MCMC Samples: sig2_eps", data_names = c("Exact MCMC", "GP Approximate MCMC"), 
+                                    vertical_line = sig2_eps)
+print(hist_plot_sig2_eps)
+
+```
+
+
+
+
 
 
 
